<resources>
    <string name="app_name">Foodie Go</string>

    <string name="welcomeMessage">Welcome!</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="createAccountButton">Create Account</string>
    <string name="logoDescription">Logo</string>
    <string name="credentials_preferences">credentials_preferences</string>
    <string name="stored_username_key">stored_username</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="stored_firstname_key">stored_firstname_key</string>
    <string name="stored_lastname_key">stored_lastname_key</string>
    <string name="stored_key_key">stored_key_key</string>
    <string name="username_bundle_key">username_bundle_key</string>
    <string name="firstname_bundle_key">firstname_bundle_key</string>
    <string name="lastname_bundle_key">lastname_bundle_key</string>
    <string name="key_bundle_key">key_bundle_key</string>
    <string name="logout_menu_item_text">Logout</string>
    <string name="add_friend_menu_item_text">Add Friend</string>
    <string name="add_friend_dialog_text">Enter your friend\'s username:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="reviewHint">Write your review here</string>
    <string name="leaveReviewButton">Leave Review</string>
    <string name="foodie_go_location_updates_notif_channel_id">Foodie Go Location Updates</string>
    <string name="locationDetailNameKey">location_name</string>
    <string name="locationDetailLatKey">location_lat</string>
    <string name="locationDetailLongKey">location_long</string>
    <string name="locationDetailRatingKey">location_rating</string>
    <string name="rating_star_content_desc">Rating</string>
    <string name="begin_route_button_content_desc">Begin Route Button</string>
    <string name="reviews_list_label">Reviews</string>
    <string name="activity_list_label">Activity</string>
    <string name="claim_token_menu_item">Claim Token</string>
    <string name="leave_review_menu_item">Leave Review</string>
    <string name="leave_review_content_desc">Leave Review</string>
    <string name="claim_token_content_desc">Claim Token</string>
    <string name="person_icon_desc">person icon</string>
    <string name="social_feed_menu_item">Social Feed</string>
    <string name="post_activity_content_desc">Post Activity</string>
    <string name="postButton">Post</string>
    <string name="location_prompt">Location</string>
    <string name="social_activity_prompt">What did you do there?</string>
    <string name="recommendButton">Recommend something!</string>
    <string name="get_reccomendation_content_desc">Get Reccomendation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>